tests/failing/forgot_func_import.rgo
int: @/int
exit: @/exit
foo: (n: int) {
    printf("Number: %d\n", n, exit(0)) // Error: forgot to import printf
}
foo(1)
